bin_PROGRAMS = g95

EXTRA_DIST = MANIFEST CONTRIB BUGS autogen.sh

g95_SOURCES = arith.c array.c bbt.c check.c decl.c error.c expr.c format.c \
g95.h interface.c intrinsic.c intrinsic.h io.c iresolve.c lang-options.h \
match.c matchexp.c misc.c module.c options.c parse.c primary.c resolve.c \
scanner.c select.c simplify.c st.c symbol.c
